fix footer & view on mobile

--- a/res/public/css/style.css
+++ b/res/public/css/style.css
@@ -10,13 +10,24 @@ html, body {
     width: 100%;
     height: 100%; */
 	/* min-height: 100% !important; */
+	/* position: relative; */
+	box-sizing: border-box;
 	min-height: 100vh !important;
+}
+
+html {
+	/* min-height: 100vh !important; */
+}
+
+body {
 	position: relative;
+	padding: 3rem 0rem 3rem !important;
+	/* min-height: 100% !important; */
 }
 
 #logo img {
 	/* height: 300px; */
-	width: 40%;
+	width: 60%;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -57,9 +68,12 @@ hr {
 	height: .1rem !important;
 }
 
-label, code {
+label, code, h4 {
 	/* font-size: 1.2rem !important; */
+	max-width: 100%;
+	word-wrap: break-word;
 }
+
 footer {
 	/* margin: 0 auto; */
 	bottom: 0;
@@ -72,7 +86,7 @@ li{
 
 img{
 	max-width: 80%;
-	max-height: 60vh;
+	max-height: 70vh;
 }
 
 .screen {
